core/engine/tests/snapshots/engine__multi-switch_0.snap
---
source: core/engine/tests/engine.rs
expression: serialized_result
---
performance: "[perf]"
result:
  flag:
    turnover: red
trace:
  2ee16c8c-fb12-4f20-9813-67bad6f4eb14:
    id: 2ee16c8c-fb12-4f20-9813-67bad6f4eb14
    input:
      company:
        type: LLC
    name: Model Turnover LLC
    order:
      "$serde_json::private::Number": "3"
    output:
      flag:
        turnover: red
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "2"
      reference_map:
        company.turnover: ~
      rule:
        _id: 952300fd-e4d9-4301-8a5a-4eda1d01d8ee
        "company.turnover[fa0fd31a-8865-43fb-8a60-b729c640140a]": ""
  84b0e11b-8c9d-46f3-ac34-f674f3b98068:
    id: 84b0e11b-8c9d-46f3-ac34-f674f3b98068
    input:
      flag:
        turnover: red
    name: Response
    order:
      "$serde_json::private::Number": "4"
    output: ~
    performance: "[perf]"
    traceData: ~
  dc7b8739-e234-4363-afe9-df156f082f6f:
    id: dc7b8739-e234-4363-afe9-df156f082f6f
    input:
      company:
        type: LLC
    name: switchNode 1
    order:
      "$serde_json::private::Number": "2"
    output:
      company:
        type: LLC
    performance: "[perf]"
    traceData:
      statements:
        - id: 931eda5b-a780-428b-9a0a-e3eb6283bab4
  de6cc00d-ef1b-46f5-9beb-9285d468c39d:
    id: de6cc00d-ef1b-46f5-9beb-9285d468c39d
    input:
      company:
        type: LLC
    name: switchNode 1
    order:
      "$serde_json::private::Number": "1"
    output:
      company:
        type: LLC
    performance: "[perf]"
    traceData:
      statements:
        - id: 6499e0bb-2cda-4a5f-9246-d48e7d2177fb
  fecde070-38cf-4656-81d7-3a2cb6e38f8f:
    id: fecde070-38cf-4656-81d7-3a2cb6e38f8f
    input: ~
    name: Request
    order:
      "$serde_json::private::Number": "0"
    output:
      company:
        type: LLC
    performance: "[perf]"
    traceData: ~
